# tetris-sdl

./: CMakeLists.txt  build.sh  debug.sh
src/: game.h  main.cpp
